--- a/web/src/components/Layout/Layout.module.scss
+++ b/web/src/components/Layout/Layout.module.scss
@@ -5,6 +5,7 @@
 
 .Wrapper {
   transition: $duration-short $easing-standard;
+  overflow: hidden;
 }
 
 .Content {
